# TH_task

./: .gitignore  celerybeat-schedule  db.sqlite3  pyproject.toml  pytest.ini  t.py  tt.py
apps/api/: schemas.py  urls.py
apps/tasks/: admin.py  api.py  interval_maths.py  models.py  schemas.py  services.py  tasks.py  tests.py  urls.py
apps/tasks/migrations/: 0001_initial.py  0002_remove_cw_performed_cw_created_at_cw_is_deleted_and_more.py  0003_alter_task_due_months.py  0004_alter_task_code_alter_task_due_months.py  0005_alter_cw_next_due_date.py  0006_alter_cw_unique_together_cw_perform_date_gt_today.py  0007_remove_cw_perform_date_gt_today_and_more.py  0008_alter_cw_created_at_alter_cw_next_due_date_and_more.py  0008_remove_cw_perform_date_gt_today_alter_cw_created_at_and_more.py  0009_remove_cw_perform_date_gt_today_and_more.py  0010_remove_cw_perform_date_gt_today_and_more.py  0011_remove_cw_perform_date_lte_today.py  0012_alter_cw_perform_date.py  0013_alter_cw_perform_date.py  0014_task_next_due_date.py  0015_remove_task_next_due_date.py  0016_tolerance.py  0017_tolerance_percent_count_alter_tolerance_adj_unit.py  0018_remove_tolerance_adj_unit_remove_tolerance_neg_adj_and_more.py  0019_cw_adjusted_days_alter_tolerance_task.py  0020_alter_tolerance_neg_tol_alter_tolerance_pos_tol.py  0021_alter_tolerance_neg_tol_alter_tolerance_pos_tol.py  0022_tolerance_is_active_alter_tolerance_unique_together.py  0023_alter_tolerance_unique_together_and_more.py  (+29 more)
config/: celery.py  settings.py  urls.py
config/middleware/: sqllogger.py
tests/: test_api.py
(+4 files in other folders)
